[package]
name = "dfm"
version = "0.1.0"
authors = ["Guillaume Favelier <guillaume.favelier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "1.0.5"
git2 = "0.13"
clap = "3.0.0-beta.2"
toml = "0.5.8"
