[package]
name = "dfm"
version = "0.1.0"
authors = ["Guillaume Favelier <guillaume.favelier@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dirs = "1.0.5"
toml = "0.5.8"
shellexpand = "2.1.0"
